--- a/www/join.html
+++ b/www/join.html
@@ -282,7 +282,7 @@
             <div class="col col-md-4">
               <div class="ce-feature-box-6 text-left margin-bottom">
                 <div class="img-box">
-                  <img src="images/mcr/IMG_0103.jpg" alt="" class="img-responsive"/> </div>
+                  <img src="images/mcr/20180120_130610.jpg" alt="" class="img-responsive"/> </div>
                 <div class="clearfix"></div>
                 <br/>
                 <div class="text-box">
