--- a/www/join.html
+++ b/www/join.html
@@ -266,7 +266,7 @@
             <div class="col col-md-4">
               <div class="ce-feature-box-6 text-left margin-bottom">
                 <div class="img-box">
-                  <img src="images/mcr/IMG_3614.jpg" alt="" class="img-responsive"/> </div>
+                  <img src="images/mcr/IMG_3614.JPG" alt="" class="img-responsive"/> </div>
                 <div class="clearfix"></div>
                 <br/>
                 <div class="text-box">
