--- a/www/mentor.html
+++ b/www/mentor.html
@@ -359,18 +359,18 @@
   <div class="row">
 <div class="col-md-6">
 <label class="label-text" for="myname"> Name</label>
-<input id="myname" name="myname" class="input-1" type="text" placeholder="Enter your name" name="Name">
+<input id="myname" name="myname" class="input-1" type="text" placeholder="Enter your name">
 </div>
 <div class="col-md-6">
 <label class="label-text" for="myemail"> Email Address</label>
-<input id="myemail" name="myemail" class="input-1" type="text" placeholder="Enter your email" name="Name">
+<input id="myemail" name="myemail" class="input-1" type="text" placeholder="Enter your email">
 </div>
   </div>
 <!-- end row -->
 <div class="row">
 <div class="col-md-6">
 <label class="label-text" for="mysubject"> Subject</label>
-<input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject" name="Subject">
+<input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject">
 </div>
 </div>
 <!-- end row -->
@@ -379,7 +379,7 @@
 <div class="col-md-12">
 <label class="label-text" for="mymessage">Message</label>
 <textarea id="mymessage" name="mymessage" class="textaria-1"
-placeholder="Tell us about yourself! (career/education/skills, mentoring experience, personal learning goals, schedule availabilty)" name="mymessage"></textarea>
+placeholder="Tell us about yourself! (career/education/skills, mentoring experience, personal learning goals, schedule availabilty)"></textarea>
 </div>
 </div>
 <!-- end row -->
