--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -402,18 +402,18 @@
   <div class="row">
 <div class="col-md-6">
 <label class="label-text" for="myname"> Name</label>
-<input id="myname" name="myname" class="input-1" type="text" placeholder="Enter your name" name="Name">
+<input id="myname" name="myname" class="input-1" type="text" placeholder="Enter your name">
 </div>
 <div class="col-md-6">
 <label class="label-text" for="myemail"> Email Address</label>
-<input id="myemail" name="myemail" class="input-1" type="text" placeholder="Enter your email" name="Name">
+<input id="myemail" name="myemail" class="input-1" type="text" placeholder="Enter your email">
 </div>
   </div>
 <!-- end row -->
 <div class="row" style="display:none;">
 <div class="col-md-6">
 <label class="label-text" for="mysubject"> Subject</label>
-<input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject" name="Subject" value="I am interested in sponsoring Metalow Robotics">
+<input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject" value="I am interested in sponsoring Metalow Robotics">
 </div>
 </div>
 <!-- end row -->
@@ -421,7 +421,7 @@
   <div class="row">
 <div class="col-md-12">
 <label class="label-text" for="mymessage">Message</label>
-<textarea id="mymessage" name="mymessage" class="textaria-1" placeholder="How are you interested in sponsoring?" name="mymessage"></textarea>
+<textarea id="mymessage" name="mymessage" class="textaria-1" placeholder="How are you interested in sponsoring?"></textarea>
 </div>
   </div>
 <!-- end row -->
