--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -81,14 +81,15 @@
               <div class="col-sm-10">
                 <div class="main-nav">
                   <ul class="nav navbar-nav top-nav">
-                    <li class="search-parent"> <a href="https://www.facebook.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-facebook"></i></a> </li>
-                    <li class="search-parent"> <a href="https://twitter.com/metalcow4213" title=""><i aria-hidden="true" class="fab fa-twitter-square"></i></a> </li>
-                    <li class="search-parent"> <a href="https://www.youtube.com/user/TeamMetalCow" title=""><i aria-hidden="true" class="fab fa-youtube"></i></a> </li>
-                    <li class="search-parent"> <a href="https://www.instagram.com/metalcowrobotics" title=""><i aria-hidden="true" class="fab fa-instagram"></i></a> </li>
-                    <li class="search-parent"> <a href="https://github.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-github"></i></a> </li>
+                    <li class=""> <a href="https://www.facebook.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-facebook"></i></a> </li>
+                    <li class=""> <a href="https://twitter.com/metalcow4213" title=""><i aria-hidden="true" class="fab fa-twitter-square"></i></a> </li>
+                    <li class=""> <a href="https://www.youtube.com/user/TeamMetalCow" title=""><i aria-hidden="true" class="fab fa-youtube"></i></a> </li>
+                    <li class=""> <a href="https://www.instagram.com/metalcowrobotics" title=""><i aria-hidden="true" class="fab fa-instagram"></i></a> </li>
+                    <li class=""> <a href="https://github.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-github"></i></a> </li>
 
-                    <li class="visible-xs menu-icon"> <a href="javascript:void(0)" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false"> <i aria-hidden="true" class="fa fa-bars"></i> </a> </li>
-                  </ul>
+                    <li class="visible-xs menu-icon">
+                      <a href="javascript:void(0)" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false"> <i aria-hidden="true" class="fa fa-bars"></i> </a>
+                    </li>                  </ul>
                   <div id="menu" class="collapse">
                     <ul class="nav navbar-nav">
                       <li class="right"> <a href="join.html">Join</a> </li>
