--- a/www/apply.html
+++ b/www/apply.html
@@ -138,7 +138,7 @@
 
       <section class="sec-padding">
       <div class="container">
-          <form class="form-horizontal" method="post" action="/studentAppProcessor.php">
+          <form class="form-horizontal" role="form" method="post" action="studentAppProcessor.php">
               <div class="row">
 
                 <div class="col-md-6">
