--- a/www/index.html
+++ b/www/index.html
@@ -261,7 +261,7 @@
                 <br/>
                 <div class="text-box">
                   <h5 class="title font-weight-5">Sponsors</h5>
-                  <p>Sponsoring your MetalCow Robotics Team is a great way to support science, technology, engineering and math (STEM) education in the McLean County area.</p>
+                  <p>Sponsoring your MetalCow Robotics team is a great way to support science, technology, engineering and math (STEM) education in the McLean County area.</p>
                   <br/>
                   <br/>
                   <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="sponsor.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Read more</a> </div>
