--- a/www/join.html
+++ b/www/join.html
@@ -142,11 +142,11 @@
           <div class="col col-md-5"> <br/>
             <h5 class="raleway text-primary">Students and Parents</h5>
             <h2 class="raleway font-weight-4 less-mar-1">Join MetalCow Robotics &ndash; </h2>
-            <h2 class="font-weight-7 less-mar-1">build a robot & your resume.</h2>
+            <h2 class="font-weight-7 less-mar-1">build a robot & your resume</h2>
             <br/>
             <h6 class="raleway">MetalCow Robotics is a <strong>4-H SPIN club</strong> that participates in <strong>FIRST Robotics Competition.</strong>
               The team is made up of students ages 13 to 18 from the McLean County area. Our members come from all local high-shcools and the homeschool community.
-              MetalCow Students manage the business of the team and work together to create robots from the ground up.
+              MetalCow students manage the business of the team and work together to create robots from the ground up.
             </h6>
             <p>As a member of MetalCow you will:</p>
               <div class="iconlist-2">
@@ -241,8 +241,8 @@
                 <h5 class="font-weight-4 less-mar-1 line-height-4 text-primary opacity-9">Skill building and mastery</h5>
                 <h2 class="font-weight-6 less-mar-1 text-white line-height-5">Find your passion</h2>
                 <div class="ce-title-line"></div>
-                <h6 class="ce-sub-text text-white raleway opacity-5">On MetalCow students choose the role that interests them. The most important thing the team is looking for is enthusiasm and an interest in learning new things; and apply those things in an organization with a small-business start-up mentality.
-                  The skills our team needs are wide-ranging and everyone does a little bit of everything.  Don't worry if you are unsure of which role you will <em>click</em> with, many times students join our team not really knowing where they want to focus but find their passion as they explore different roles.</h6>
+                <h6 class="ce-sub-text text-white raleway opacity-5">On MetalCow students choose the role that interests them. The most important qualities the team is looking for in members is an interest in learning new things, and an enthusiasm to apply those things in an organization with a innovative mentality.
+                  The skills our team needs are wide-ranging, and everyone does a little bit of everything.  Don't worry if you are unsure of which role you will <em>click</em> with, many times students join our team not really knowing where they want to focus but find their passion as they explore different roles.</h6>
               </div>
             </div>
             <div class="clearfix"></div>
@@ -256,7 +256,7 @@
                 <br/>
                 <div class="text-box">
                   <h5 class="title font-weight-5">Business & Marketing</h5>
-                  <p>The business team works together to promote the team to investors, create the written, visual materials and branding for the team. They a responsible for award submissions, the website, managing the social media for the team and create the printed material the team utilizes. Students with an interest in graphic design, marketing, social media management, or who see themselves as an entrepreneur and hope to run a business of their own someday would excel at the challenges in this department.</p>
+                  <p>The business team works to promote the team to investors and creates the written and visual materials for branding the team. They a responsible for award submissions, the website, managing the social media for the team and create the printed material the team utilizes. Students with an interest in graphic design, marketing, social media management, or who see themselves as an entrepreneur and hope to run a business of their own someday would excel at the challenges in this department.</p>
                   <br/>
                   <br/>
                   <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
