--- a/www/mentor.html
+++ b/www/mentor.html
@@ -148,7 +148,7 @@
           <div class="col-md-5"> <br/>
             <h5 class="raleway text-primary">Industry and College Mentors</h5>
             <h2 class="raleway font-weight-4 less-mar-1">Inspire students to learn through exploration &mdash; </h2>
-            <h2 class="font-weight-7 less-mar-1">and build the workforce of tomorrow.</h2>
+            <h2 class="font-weight-7 less-mar-1">and build the workforce of tomorrow</h2>
             <br/>
             <h6 class="raleway">Our distinguished industry mentors give their time and energy to help students learn: programming, computer aided design, electrical engineering, mechanical engineering, writing, graphic design, business planning, presentation, fundraising, and animation skills.</h6>
             <p>Who are FIRST mentors and coaches? Our team members say it best. A mentor/coach:</p>
