--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -141,7 +141,7 @@
           <div class="col col-md-5"> <br/>
             <h5 class="raleway text-primary">Corporate Sponsors</h5>
             <h2 class="raleway font-weight-4 less-mar-1">Invest in education and  &ndash; </h2>
-            <h2 class="font-weight-7 less-mar-1">build the workforce of tomorrow.</h2>
+            <h2 class="font-weight-7 less-mar-1">build the workforce of tomorrow</h2>
             <br/>
             <h6 class="raleway">What are you supporting when you sponsor our team?  MetalCow Robotics is a 4-H SPIN club that participates in
               FIRST Robotics Competitions. But it isn't just a robot.  It is a small business where members
