form adjustments for mobile... :(

--- a/www/mentor.html
+++ b/www/mentor.html
@@ -346,29 +346,35 @@
     <h2 class="font-weight-6 less-mar-1 line-height-5">Become and Mentor, Apply Today!</h2>
     <br />
   </div>
+
   <div class="form-body bg-light">
-    <form role="form" method="post" action="mailProcessor-contact.php" onsubmit="">
-  <div class="row">
-<div class="col-md-6">
-<label class="label-text" for="myname"> Name</label>
-<input id="myname" name="myname" class="input-1" type="text" placeholder="Enter your name">
-</div>
-<div class="col-md-6">
-<label class="label-text" for="myemail"> Email Address</label>
-<input id="myemail" name="myemail" class="input-1" type="text" placeholder="Enter your email">
-</div>
-  </div>
-<!-- end row -->
+  <form role="form" method="post" action="mailProcessor-contact.php" onsubmit="">
+
+
 <div class="row">
-<div class="col-md-6">
-<label class="label-text" for="mysubject"> Subject</label>
-<input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject">
+  <div class="form-group col-md-6">
+    <label class="label-text" for="myname"> Name</label>
+    <input id="myname" name="myname" class="input-1" type="text" placeholder="Enter your name">
+  </div>
 </div>
+<div class="row">
+  <div class="form-group col-md-6">
+    <label class="label-text" for="myemail"> Email Address</label>
+    <input id="myemail" name="myemail" class="input-1" type="text" placeholder="Enter your email">
+  </div>
 </div>
 <!-- end row -->
 
 <div class="row">
-<div class="col-md-12">
+  <div class="col col-md-6">
+    <label class="label-text" for="mysubject"> Subject</label>
+    <input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject">
+  </div>
+</div>
+<!-- end row -->
+
+<div class="row">
+<div class="col col-md-12">
 <label class="label-text" for="mymessage">Message</label>
 <textarea id="mymessage" name="mymessage" class="textaria-1"
 placeholder="Tell us about yourself! (career/education/skills, mentoring experience, personal learning goals, schedule availabilty)"></textarea>
@@ -376,20 +382,21 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
 </div>
 <!-- end row -->
 
-    <div class="row">
-    <br/>
-<div class="col-md-12 text-center">
-<button class="btn btn-dark btn-medium uppercase" type="submit">
-<i class="fa fa-paper-plane"></i>
- Submit Application
-</button>
+<div class="row">
+<br/>
+<div class="col col-md-12 text-center">
+  <button class="btn btn-dark btn-medium uppercase" type="submit">
+  <i class="fa fa-paper-plane"></i> Submit Application
+  </button>
 </div>
-  </div>
+</div>
 <!-- end row -->
-  </div>
-  <!--end form body-->
-</form></div>
-  </section>
+
+
+</form>
+</div><!--end form body-->
+</div>
+</section>
 <div class="clearfix"></div>
   <!-- end section -->
 
