--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -391,11 +391,13 @@
       <br />
     </div>  <div class="form-body bg-light">
     <form role="form" method="post" action="mailProcessor-contact.php" onsubmit="">
-  <div class="row">
+<div class="row">
 <div class="col-md-6">
 <label class="label-text" for="myname"> Name</label>
 <input id="myname" name="myname" class="input-1" type="text" placeholder="Enter your name">
 </div>
+</div>
+<div class="row">
 <div class="col-md-6">
 <label class="label-text" for="myemail"> Email Address</label>
 <input id="myemail" name="myemail" class="input-1" type="text" placeholder="Enter your email">
