--- a/www/join.html
+++ b/www/join.html
@@ -193,7 +193,9 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h3 class="less-mar-1 font-weight-4 line-height-4 text-white">MetalCow Robotics is a hands-on team that builds from scratch. </h3>
-          <p class="text-white">Our students aquire STEM skills, build confidence, teamwork, public speaking skills, and learn from industry professionals. </p>
+          <p class="text-white">Our students <article class="">
+
+          </article>quire STEM skills, build confidence, teamwork, public speaking skills, and learn from industry professionals. </p>
           <div class="clearfix"></div>
           <br/>
           <a class="btn btn-white btn-round uppercase" href="apply.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply Today!</a>
