--- a/www/emailform.html
+++ b/www/emailform.html
@@ -11,7 +11,7 @@ body, html {
 
 .bg {
     /* The image used */
-    background-image: url("./img/FormPageCowLogo.png");
+    background-image: url("./images/mcr/FormPageCowLogo.png");
 
     /* Size */
     height: 70%;
