--- a/www/join.html
+++ b/www/join.html
@@ -297,7 +297,7 @@
     <div class="clearfix"></div>
     <!-- end section -->
 
-    <section style="background: url(/images/mcr/3dprinter.png) no-repeat fixed; background-size: cover;">
+    <section style="background: url(/images/mcr/3dprinter.png) no-repeat fixed; background-color: black; background-size: cover;">
           <div class="container-fluid nopadding">
     	<div class="parallax-overlay bg-opacity-3">
             <div class="container sec-tpadding-4 sec-bpadding-4">
