More logo changes

--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -201,16 +201,18 @@
      <div class="col-md-12">
      <ul class="clients-list border-dark grid-cols-6">
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_MonsantoFund.png" alt="Monsanto Fund"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack"></a></li>
+       
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" ></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Solidworks.png" alt="Solidworks"></a></li>
      </ul>
      <ul class="clients-list border-dark grid-cols-6 hover-8">
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_DuPont.png" alt="DuPont"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_Pioneer.png" alt="Pioneer" ></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" ></a></li>
+
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_TimelessClovers.png"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_4H.png" alt="4H"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics"></a></li>
@@ -477,18 +479,19 @@
             <h4 class="text-white less-mar3 font-weight-5">Sponsored By:</h4>
             <div class="clearfix"></div>
             <br/>
-              <img src="/images/mcr/sponsors/sm_Rivian.png" alt="Rivian" width='100'>
-              <img src="/images/mcr/sponsors/sm_Slack.png" alt="Slack" width='100'>
-              <img src="/images/mcr/sponsors/sm_Growmark.png" alt="Growmark" width='100'>
-              <img src="/images/mcr/sponsors/sm_G3.png" alt="G3 Machining" width='100'>
-              <img src="/images/mcr/sponsors/sm_StateFarm.png" alt="State Farm" width='100'>
-              <img src="/images/mcr/sponsors/sm_Solidworks.png" alt="Solidworks" width='100'>
-              <img src="/images/mcr/sponsors/sm_DuPont.png" alt="DuPont" width='100'>
-              <img src="/images/mcr/sponsors/sm_Pioneer.png" alt="Pioneer" width='100'>
-              <img src="/images/mcr/sponsors/sm_ACC.png" alt="ACC" width='100'>
-              <img src="/images/mcr/sponsors/sm_TimelessClovers.png" alt="Timeless Clovers" width='100'>
-              <img src="/images/mcr/sponsors/sm_4H.png" alt="4H" width='100'>
-              <img src="/images/mcr/sponsors/sm_FIRST.png" alt="FIRST Robotics" width='100'>
+            <img src="/images/mcr/sponsors/sm_Rivian.png" alt="Rivian" width='100'>
+            <img src="/images/mcr/sponsors/sm_MonsantoFund.png" alt="MonsantoFund" width='100'>
+            <img src="/images/mcr/sponsors/sm_Slack.png" alt="Slack" width='100'>
+
+            <img src="/images/mcr/sponsors/sm_Growmark.png" alt="Growmark" width='100'>
+            <img src="/images/mcr/sponsors/sm_ACC.png" alt="ACC" width='100'>
+            <img src="/images/mcr/sponsors/sm_G3.png" alt="G3 Machining" width='100'>
+
+            <img src="/images/mcr/sponsors/sm_StateFarm.png" alt="State Farm" width='100'>
+            <img src="/images/mcr/sponsors/sm_TimelessClovers.png" alt="Timeless Clovers" width='100'>
+            <img src="/images/mcr/sponsors/sm_4H.png" alt="4H" width='100'>
+
+            <img src="/images/mcr/sponsors/sm_FIRST.png" alt="FIRST Robotics" width='100'>
 
           </div>
           <!--end item-->
