--- a/www/join.html
+++ b/www/join.html
@@ -70,7 +70,7 @@
         <div class="container">
           <div class="mod-menu">
             <div class="row">
-              <div class="col-sm-2"> <a href="index.html" title="" class="logo style-2 mar-4"> <img src="images/logo/logo-light.png" alt=""> </a> </div>
+              <div class="col-sm-2"> <a href="/" title="" class="logo style-2 mar-4"> <img src="images/logo/logo-light.png" alt=""> </a> </div>
               <div class="col-sm-10">
                 <div class="main-nav">
                   <ul class="nav navbar-nav top-nav">
@@ -85,9 +85,10 @@
                     </li>                  </ul>
                   <div id="menu" class="collapse">
                     <ul class="nav navbar-nav">
-                      <li class="right active"> <a href="join.html">Join</a> </li>
-                      <li> <a href="mentor.html">Mentor</a> </li>
-                      <li> <a href="sponsor.html">Sponsor</a> </li>
+                      <li class="right active"> <a href="join">Join</a> </li>
+                      <li> <a href="mentor">Mentor</a> </li>
+                      <li> <a href="sponsor">Sponsor</a> </li>
+                      <li> <a href="https://www.thebluealliance.com/team/4213">Competition</a>
                     </ul>
                   </div>
                 </div>
