--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -35,7 +35,6 @@
 <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
 <link rel="stylesheet" href="js/parallax/main.css">
 <link rel="stylesheet" type="text/css" href="js/smart-forms/smart-forms.css">
-<link rel="stylesheet" href="css/mcr.css" type="text/css">
 
 <link rel="stylesheet" href="css/shortcodes.css" type="text/css">
 <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css" type="text/css">
@@ -68,7 +67,7 @@
         <div class="container">
           <div class="mod-menu">
             <div class="row">
-              <div class="col-sm-2"> <a href="index.html" title="" class="logo style-2 mar-4"> <img src="images/logo/logo-light.png" alt=""> </a> </div>
+              <div class="col-sm-2"> <a href="/" title="" class="logo style-2 mar-4"> <img src="images/logo/logo-light.png" alt=""> </a> </div>
               <div class="col-sm-10">
                 <div class="main-nav">
                   <ul class="nav navbar-nav top-nav">
@@ -83,9 +82,10 @@
                     </li>                  </ul>
                   <div id="menu" class="collapse">
                     <ul class="nav navbar-nav">
-                      <li class="right"> <a href="join.html">Join</a> </li>
-                      <li> <a href="mentor.html">Mentor</a> </li>
-                      <li class="active"> <a href="sponsor.html">Sponsor</a> </li>
+                      <li class="right"> <a href="join">Join</a> </li>
+                      <li> <a href="mentor">Mentor</a> </li>
+                      <li class="active"> <a href="sponsor">Sponsor</a> </li>
+                      <li> <a href="https://www.thebluealliance.com/team/4213">Competition</a>
                     </ul>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                         </div>
                         <ul class="features-list">
                           <li style="color:#fff">Listed on published materials</li>
-                          <li style="color:#fff">Link on website</li>
+                          <li style="color:#fff">Logo on website</li>
                           <li style="color:#fff">Logo on t-shirt</li>
                           <li style="color:#fff">Logo on banner</li>
                           <li style="color:#fff">Logo on Robot</li>
@@ -306,14 +306,14 @@
                       <div class="pricing-table-5-top-strip"></div>
                       <div class="pricing-table-5">
                         <div class="title-box">
-                          <h3 class="title font-weight-5 less-mar2">Basic</h3>
-                          <div class="price"><sup>$</sup>1,000<i>/ yr</i></div>
+                          <h3 class="title font-weight-5 less-mar2">Silver</h3>
+                          <div class="price"><sup>$</sup>500<i>/ yr</i></div>
                         </div>
                         <ul class="features-list">
                           <li><i class="fa fa-check green-4"></i></li>
-                          <li><i class="fa fa-check green-4"></i></li>
-                          <li>&nbsp;</li>
-                          <li>&nbsp;</li>
+                          <li>Small</i></li>
+                          <li>Small</li>
+                          <li>Small</li>
                           <li>&nbsp;</li>
                           <li>&nbsp;</li>
                         </ul>
@@ -328,15 +328,15 @@
                       <div class="pricing-table-5-top-strip active"></div>
                       <div class="pricing-table-5 active bmargin">
                         <div class="title-box">
-                          <h3 class="title font-weight-5 less-mar2">Standard</h3>
-                          <div class="price"><sup>$</sup>2,500<i>/ yr</i></div>
+                          <h3 class="title font-weight-5 less-mar2">Gold</h3>
+                          <div class="price"><sup>$</sup>1000<i>/ yr</i></div>
                         </div>
                         <ul class="features-list">
                           <li><i class="fa fa-check green-4"></i></li>
-                          <li><i class="fa fa-check green-4"></i></li>
-                          <li>Small</li>
-                          <li>Small</li>
-                          <li>&nbsp;</li>
+                          <li>Medium</i></li>
+                          <li>Medium</li>
+                          <li>Medium</li>
+                          <li>Medium</li>
                           <li>&nbsp;</li>
                         </ul>
                         <div class="clearfix"></div>
@@ -350,8 +350,8 @@
                       <div class="pricing-table-5-top-strip"></div>
                       <div class="pricing-table-5">
                         <div class="title-box">
-                          <h3 class="title font-weight-5 less-mar2">Elite</h3>
-                          <div class="price"><sup>$</sup>5,000<i>/ yr</i></div>
+                          <h3 class="title font-weight-5 less-mar2">Platinum</h3>
+                          <div class="price"><sup>$</sup>3,000<i>/ yr</i></div>
                         </div>
                         <ul class="features-list">
                           <li><i class="fa fa-check green-4"></i></li>
@@ -370,7 +370,7 @@
                   </div>
 <!--Pricing Table End-->
 
-
+<p><em>*Contact us for details and information about 3-year commitment bonus!</em></p>
 
                 </div>
               </div>
