--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -311,7 +311,7 @@
                         </div>
                         <ul class="features-list">
                           <li><i class="fa fa-check green-4"></i></li>
-                          <li>Small</i></li>
+                          <li><i class="fa fa-check green-4"></i></li>
                           <li>Small</li>
                           <li>Small</li>
                           <li>&nbsp;</li>
@@ -333,7 +333,7 @@
                         </div>
                         <ul class="features-list">
                           <li><i class="fa fa-check green-4"></i></li>
-                          <li>Medium</i></li>
+                          <li><i class="fa fa-check green-4"></i></li>
                           <li>Medium</li>
                           <li>Medium</li>
                           <li>Medium</li>
