removed .html sine .htaccess is configured

--- a/www/index.html
+++ b/www/index.html
@@ -184,7 +184,7 @@
 			data-transform_out="opacity:0;s:3000;e:Power4.easeIn;s:3000;e:Power4.easeIn;"
 			data-endspeed="300"
 			data-captionhidden="off"
-			style="z-index: 6"> <a href="/join.html">Apply Today!</a></div>
+			style="z-index: 6"> <a href="/join">Apply Today!</a></div>
               </li>
             </ul>
           </div>
@@ -222,7 +222,7 @@
                   <p>MetalCow Robotics' students build robots and develop practical skills in business, marketing, coding, manufacturing, and computer aided design.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="join.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Read more</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="join"><i class="fa fa-play-circle" aria-hidden="true"></i> Read more</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -238,7 +238,7 @@
                   <p>Our mentors prepare this generation of STEM students and pave the way for greater student outreach.  Are you prepared to teach students these skills?</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="mentor.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Read more</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="mentor"><i class="fa fa-play-circle" aria-hidden="true"></i> Read more</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -254,7 +254,7 @@
                   <p>Sponsoring your MetalCow Robotics team is a great way to support science, technology, engineering and math (STEM) education in the McLean County area.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="sponsor.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Read more</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="sponsor"><i class="fa fa-play-circle" aria-hidden="true"></i> Read more</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -369,9 +369,9 @@
           <p class="text-white">Our students aquire STEM skills, build confidence, teamwork, public speaking skills, and learn from industry professionals. </p>
           <div class="clearfix"></div>
           <br/>
-          <a class="btn btn-white btn-round uppercase" href="join.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Join Today</a>
+          <a class="btn btn-white btn-round uppercase" href="join"><i class="fa fa-play-circle" aria-hidden="true"></i> Join Today</a>
            &nbsp;&nbsp; &nbsp;
-           <a class="btn btn-dark white btn-round uppercase" href="mentor.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Become a Mentor</a> </div>
+           <a class="btn btn-dark white btn-round uppercase" href="mentor"><i class="fa fa-play-circle" aria-hidden="true"></i> Become a Mentor</a> </div>
       </div>
     </div>
   </section>
