--- a/www/join.html
+++ b/www/join.html
@@ -197,7 +197,7 @@
           <p class="text-white">Our students aquire STEM skills, build confidence, teamwork, public speaking skills, and learn from industry professionals. </p>
           <div class="clearfix"></div>
           <br/>
-          <a class="btn btn-white btn-round uppercase" href="apply.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply Today!</a>
+          <a class="btn btn-white btn-round uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply Today!</a>
       </div>
     </div>
   </section>
@@ -252,7 +252,7 @@
                   <p>The business team works to promote the team to investors and creates the written and visual materials for branding the team. They a responsible for award submissions, the website, managing the social media for the team and create the printed material the team utilizes. Students with an interest in graphic design, marketing, social media management, or who see themselves as an entrepreneur and hope to run a business of their own someday would excel at the challenges in this department.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -268,7 +268,7 @@
                   <p>The build team performs the manufacturing of the robot; creating and maintaining the physical aspect of the robots. Students learn proper build safety, how to turn Solidworks CAD plans into a physical object, electrical, and basic metal work skills. Students with an interest in mechanical design, electrical work, arcitecture, metalworking, or with a passion for hands on creation would thrive in the immersive build experience offered by MetalCow Robotics and the FIRST program.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -284,7 +284,7 @@
                   <p>Learn and use the Java programming language as well as electrical wiring and soldering to create the control system that brings life to the robot. Working as a team students will program the robot to run autonomously as well as create a system to be operated by a driver. They also have opportunities to create apps or build web sites. Students who enjoy coding, web design, have an interest in becoming a computer programer, or electical engineer would enjoy this aspect of the robotics team.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply.html"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
               </div>
             </div>
             <!--end item-->
