wired in a /comps htaccess shortcut to blue alliance

--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -85,7 +85,7 @@
                       <li class="right"> <a href="join">Join</a> </li>
                       <li> <a href="mentor">Mentor</a> </li>
                       <li class="active"> <a href="sponsor">Sponsor</a> </li>
-                      <li> <a href="https://www.thebluealliance.com/team/4213">Competition</a>
+                      <li> <a href="comps">Competition</a>
                     </ul>
                   </div>
                 </div>
