--- a/www/join.html
+++ b/www/join.html
@@ -88,7 +88,7 @@
                       <li class="right active"> <a href="join">Join</a> </li>
                       <li> <a href="mentor">Mentor</a> </li>
                       <li> <a href="sponsor">Sponsor</a> </li>
-                      <li> <a href="https://www.thebluealliance.com/team/4213">Competition</a>
+                      <li> <a href="comps"">Competition</a>
                     </ul>
                   </div>
                 </div>
