--- a/www/mentor.html
+++ b/www/mentor.html
@@ -86,7 +86,7 @@
                       <li class="right"> <a href="join">Join</a> </li>
                       <li class="active"> <a href="mentor">Mentor</a> </li>
                       <li> <a href="sponsor">Sponsor</a> </li>
-                      <li> <a href="https://www.thebluealliance.com/team/4213">Competition</a>
+                      <li> <a href="comps">Competition</a>
                     </ul>
                   </div>
                 </div>
