--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -370,7 +370,7 @@
                   </div>
 <!--Pricing Table End-->
 
-<p><em>*Contact us for details and information about 3-year commitment bonus!</em></p>
+<p><em>*<a href="#contact">Contact us</a> for details and information about 3-year commitment bonus!</em></p>
 
                 </div>
               </div>
