--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -336,7 +336,7 @@
                           <li><i class="fa fa-check green-4"></i></li>
                           <li>Medium</li>
                           <li>Medium</li>
-                          <li>Medium</li>
+                          <li><i class="fa fa-check green-4"></li>
                           <li>&nbsp;</li>
                         </ul>
                         <div class="clearfix"></div>
