Updates for 2019 Sponsors (#3)
Updated the Sponsors for 2019
Also used CSS to make the small logos in the footer white, no longer a need for small sponsor logo images so I deleted them from the filesystem.

--- a/www/mentor.html
+++ b/www/mentor.html
@@ -441,19 +441,28 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
             <h4 class="text-white less-mar3 font-weight-5">Sponsored By:</h4>
             <div class="clearfix"></div>
             <br/>
-            <img src="/images/mcr/sponsors/sm_Rivian.png" alt="Rivian" width='100'>
-            <img src="/images/mcr/sponsors/sm_MonsantoFund.png" alt="MonsantoFund" width='100'>
-            <img src="/images/mcr/sponsors/sm_Slack.png" alt="Slack" width='100'>
+                <img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian">
+                <img src="/images/mcr/sponsors/mdg_MonsantoFund.png" alt="Monsanto Fund">
+                <img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack">
+                <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
+                <img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren" >
+                <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
-            <img src="/images/mcr/sponsors/sm_Growmark.png" alt="Growmark" width='100'>
-            <img src="/images/mcr/sponsors/sm_G3.png" alt="G3 Machining" width='100'>
-            <img src="/images/mcr/sponsors/sm_StateFarm.png" alt="State Farm" width='100'>
+                <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png">
+                <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
+                <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
+                <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
+                <img src="/images/mcr/sponsors/mdg_CaseysGeneralStore.png" alt="Caseys General Store">
 
-            <img src="/images/mcr/sponsors/sm_ACC.png" alt="ACC" width='100'>
-            <img src="/images/mcr/sponsors/sm_TimelessClovers.png" alt="Timeless Clovers" width='100'>
-            <img src="/images/mcr/sponsors/sm_4H.png" alt="4H" width='100'>
-
-            <img src="/images/mcr/sponsors/sm_FIRST.png" alt="FIRST Robotics" width='100'>
+                <img src="/images/mcr/sponsors/mdg_Autodesk.png" alt="Autodesk">
+                <img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" >
+                <img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools">
+                <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
+                <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
+                <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
           </div>
           <!--end item-->
