--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -203,17 +203,29 @@
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_MonsantoFund.png" alt="Monsanto Fund"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" ></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren" ></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining"></a></li>
      </ul>
-     <ul class="clients-list border-dark grid-cols-6 hover-8">
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_DuPont.png" alt="DuPont"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Pioneer.png" alt="Pioneer" ></a></li>
+     <ul class="clients-list border-dark grid-cols-6">
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" ></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_TimelessClovers.png"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_4H.png" alt="4H"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_CaseysGeneralStore.png" alt="Caseys General Store"></a></li>
+     </ul>
+     <ul class="clients-list border-dark grid-cols-6">
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Autodesk.png" alt="Autodesk"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" ></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education"></a></li>
+
+
+       <!--<li><a href="#"><img src="/images/mcr/sponsors/mdg_4H.png" alt="4H"></a></li>-->
+       <!--<li><a href="#"><img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics"></a></li>-->
      </ul>
      </div>
      <!--end item-->
@@ -475,22 +487,30 @@
 
           <div class="col-md-6 col-xs-12 clearfix margin-bottom small_sponsors">
             <h4 class="text-white less-mar3 font-weight-5">Sponsored By:</h4>
-            <div class="clearfix"></div>
+            <div class="clearfix small_sponsors"></div>
             <br/>
-            <img src="/images/mcr/sponsors/sm_Rivian.png" alt="Rivian" width='100'>
-            <img src="/images/mcr/sponsors/sm_MonsantoFund.png" alt="MonsantoFund" width='100'>
-            <img src="/images/mcr/sponsors/sm_Slack.png" alt="Slack" width='100'>
+                <img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian">
+                <img src="/images/mcr/sponsors/mdg_MonsantoFund.png" alt="Monsanto Fund">
+                <img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack">
+                <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
+                <img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren" >
+                <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
-            <img src="/images/mcr/sponsors/sm_Growmark.png" alt="Growmark" width='100'>
-            <img src="/images/mcr/sponsors/sm_G3.png" alt="G3 Machining" width='100'>
-            <img src="/images/mcr/sponsors/sm_StateFarm.png" alt="State Farm" width='100'>
+                <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png">
+                <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
+                <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
+                <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
+                <img src="/images/mcr/sponsors/mdg_CaseysGeneralStore.png" alt="Caseys General Store">
 
-            <img src="/images/mcr/sponsors/sm_ACC.png" alt="ACC" width='100'>
-            <img src="/images/mcr/sponsors/sm_TimelessClovers.png" alt="Timeless Clovers" width='100'>
-            <img src="/images/mcr/sponsors/sm_4H.png" alt="4H" width='100'>
-
-            <img src="/images/mcr/sponsors/sm_FIRST.png" alt="FIRST Robotics" width='100'>
-
+                <img src="/images/mcr/sponsors/mdg_Autodesk.png" alt="Autodesk">
+                <img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" >
+                <img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools">
+                <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
+                <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
+                <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
           </div>
           <!--end item-->
 
